Added ability to edit scorecard details and changed Total test value in details display to default test value

--- a/Views/Setup/ScorecardDetails.cshtml
+++ b/Views/Setup/ScorecardDetails.cshtml
@@ -41,13 +41,10 @@
             @Html.DisplayFor(model => testCount)
         </dd>
         <dt class="col-sm-2">
-            Total Points
+            Default Test Value
         </dt>
         <dd class="col-sm-10">
-            @{
-                var totalPoints = Model.GetTotalValue();
-            }
-            @Html.DisplayFor(model => totalPoints)
+            @Html.DisplayFor(Model => Model.Scorecard.DefaultTestValue)
         </dd>
     </dl>
     <span style="float:right">
