--- a/Views/Setup/ScorecardDetails.cshtml
+++ b/Views/Setup/ScorecardDetails.cshtml
@@ -56,8 +56,9 @@
     </div>
     <br />
     <br />
+    <br />
 
-    <h3 style="float: left">Tests</h3>
+    <h3 style="float: left">Scorecard Tests</h3>
     <table class="table text-col">
         @{
             var defaultTest = Model.Tests.FirstOrDefault();
@@ -88,11 +89,14 @@
                     <td width="50%">
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
-                    <td width="20%">
+                    <td width="10%">
                         @Html.DisplayFor(modelItem => item.Value)
                     </td>
-                    <td width="20%">
-                        @Html.ActionLink("Edit", "EditScorecardTest", new { id = item.ID }, new { @class = "btn btn-primary btn-sm edit-btn", @style = "float:right" })
+                    <td width="30%">
+                        @Html.ActionLink("Remove", "RemoveScorecardTest", new { id = item.ID, scorecardID = Model.Scorecard.ID },
+                            new { @class = "btn btn-warning btn-sm action-btn" })
+                        @Html.ActionLink("Edit", "EditScorecardTest", new { id = item.ID },
+                            new { @class = "btn btn-secondary btn-sm action-btn" })
                     </td>
                 </tr>
             }
