--- a/Views/Scorecard/EditTestResult.cshtml
+++ b/Views/Scorecard/EditTestResult.cshtml
@@ -1,51 +1,94 @@
-﻿@model TestingFramework.Models.ScorecardTestResultModel
+﻿@model TestingFramework.ViewModels.Scorecard.EditTestResultViewModel
 
 @{
-    ViewData["Title"] = "EditTestResult";
+    ViewData["Title"] = "Test Result";
 }
 
-<h1>EditTestResult</h1>
+<style>
+    .action-btn {
+        width: 100px;
+    }
 
-<h4>ScorecardTestResultModel</h4>
+    .entry-text {
+        height: 100px;
+        width: 100%;
+    }
+</style>
+
+<h1>Edit Test Result</h1>
 <hr />
+
+<div>
+    <dl class="row">
+        <dt class="col-sm-2">
+            Description:
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => Model.Test.Description)
+        </dd>
+        <dt class="col-sm-2">
+            Expected Result:
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => Model.Test.ExpectedResult)
+        </dd>
+        <dt class="col-sm-2">
+            Scorecard Value:
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => Model.Test.Value)
+        </dd>
+        <dt class="col-sm-2">
+            Status:
+        </dt>
+        <dd class="col-sm-10">
+            @{ 
+                var statusString = "";
+                if (Model.Result.Passed == null)
+                {
+                    statusString = "Not Started";
+                }
+                else if (Model.Result.Passed == true)
+                {
+                    statusString = "Passed";
+                }
+                else if (Model.Result.Passed == false)
+                {
+                    statusString = "Failed";
+                }
+            }
+            @Html.DisplayFor(model => statusString)
+        </dd>
+    </dl>
+</div>
+<br />
+<div class="form-group">
+    @Html.ActionLink("Back to Progress", "Progress", new { id = Model.Result.ProgressID }, new { @class = "btn btn-secondary", @style = "float:left" })
+</div>
+<br />
+<hr />
+<br />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EditTestResult">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @Html.HiddenFor(model => Model.Result.ProgressID)
+            @Html.HiddenFor(model => Model.Result.CategoryID)
+            @Html.HiddenFor(model => Model.Result.TestID)
+            @Html.HiddenFor(model => Model.Result.Passed)
             <div class="form-group">
-                <label asp-for="ProgressID" class="control-label"></label>
-                <input asp-for="ProgressID" class="form-control" />
-                <span asp-validation-for="ProgressID" class="text-danger"></span>
+                @Html.LabelFor(model => Model.Result.Notes)
+                @Html.TextAreaFor(model => Model.Result.Notes, new { @class = "entry-text" })
             </div>
             <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <input asp-for="CategoryID" class="form-control" />
-                <span asp-validation-for="CategoryID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TestID" class="control-label"></label>
-                <input asp-for="TestID" class="form-control" />
-                <span asp-validation-for="TestID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Passed" class="control-label"></label>
-                <input asp-for="Passed" class="form-control" />
-                <span asp-validation-for="Passed" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Notes" class="control-label"></label>
-                <input asp-for="Notes" class="form-control" />
-                <span asp-validation-for="Notes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                @Html.ActionLink("Fail", "UpdateTestResult", new { progressID = Model.Result.ProgressID, testID = Model.Result.TestID,
+                    passed = false, notes = Model.Result.Notes }, new { @class = "btn btn-sm btn-danger action-btn", @style="float:left" })
+                @Html.ActionLink("Pass", "UpdateTestResult", new { progressID = Model.Result.ProgressID, testID = Model.Result.TestID,
+                    passed = true, notes = Model.Result.Notes }, new { @class = "btn btn-sm btn-success action-btn", @style="float:right" })
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
