--- a/Views/Scorecard/Progress.cshtml
+++ b/Views/Scorecard/Progress.cshtml
@@ -38,6 +38,12 @@
             @Html.DisplayFor(model => model.Scorecard.Description)
         </dd>
         <dt class="col-sm-2">
+            Details
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Progress.ScorecardNotes)
+        </dd>
+        <dt class="col-sm-2">
             Completed
         </dt>
         <dd class="col-sm-10">
@@ -50,6 +56,7 @@
     <br />
     <div class="form-group">
         @Html.ActionLink("Submit", "SubmitProgress", new { id = Model.Progress.ID }, new { @class = "btn btn-success h3-btn", @style = "float:right" })
+        @Html.ActionLink("Edit Details", "EditDetails", new { id = Model.Progress.ID }, new { @class = "btn btn-secondary h3-btn", @style = "float:right" })
     </div>
 </div>
 <br />
