Added current score when viewing scorecard progress & details

--- a/Views/Scorecard/ProgressDetails.cshtml
+++ b/Views/Scorecard/ProgressDetails.cshtml
@@ -52,6 +52,15 @@
             }
             @Html.DisplayFor(model => completedString)
         </dd>
+        <dt class="col-sm-2">
+            Current Score:
+        </dt>
+        <dd class="col-sm-10">
+            @{
+                var score = Model.GetCurrentScore();
+            }
+            @Html.DisplayFor(model => score)
+        </dd>
     </dl>
 </div>
 <hr />
