--- a/Views/Scorecard/Progress.cshtml
+++ b/Views/Scorecard/Progress.cshtml
@@ -1,4 +1,4 @@
-﻿@model TestingFramework.ViewModels.ScorecardProgressViewModel
+﻿@model TestingFramework.ViewModels.Scorecard.ScorecardProgressViewModel
 
 @{
     ViewData["Title"] = "Progress";
@@ -48,9 +48,18 @@
         </dt>
         <dd class="col-sm-10">
             @{
-                var completed = Model.GetTotalCompletedPercent();
+                var completed = Model.GetCompletedString();
             }
             @Html.DisplayFor(model => completed)
+        </dd>
+        <dt class="col-sm-2">
+            Current Score
+        </dt>
+        <dd class="col-sm-10">
+            @{
+                var score = Model.GetCurrentScore();
+            }
+            @Html.DisplayFor(model => score)
         </dd>
     </dl>
     <br />
