--- a/Views/Scorecard/ProgressDetails.cshtml
+++ b/Views/Scorecard/ProgressDetails.cshtml
@@ -5,10 +5,11 @@
 }
 
 <style>
-    .action-btn{
+    .action-btn {
         width: 100px;
     }
-    .entry-text{
+
+    .entry-text {
         width: 100%;
         height: 100px;
     }
@@ -76,11 +77,19 @@
             @Html.HiddenFor(model => Model.Progress.CurrentIndex)
             @Html.HiddenFor(model => Model.Progress.ResultsJson)
             @Html.HiddenFor(model => model.Progress.User)
-            @Html.TextAreaFor(model => Model.Progress.ScorecardNotes, new { @class = "entry-text" })
-            <div class="form-group">
-                @Html.ActionLink("Back", "Progress", new { id = Model.Progress.ID }, new { @class = "btn btn-secondary action-btn", @style = "float:left" })
-                <input type="submit" value="Save" class="btn btn-success action-btn" style="float:right" />
-            </div>
+
+            @if (!Model.ReadOnly)
+            {
+                @Html.TextAreaFor(model => Model.Progress.ScorecardNotes, new { @class = "entry-text" })
+                <div class="form-group">
+                    @Html.ActionLink("Back", "Progress", new { id = Model.Progress.ID }, new { @class = "btn btn-secondary action-btn", @style = "float:left" })
+                    <input type="submit" value="Save" class="btn btn-success action-btn" style="float:right" />
+                </div>
+            }
+            else
+            {
+                @Html.TextAreaFor(model => Model.Progress.ScorecardNotes, new { @class = "entry-text", @readonly = true })
+            }
         </form>
     </div>
 </div>
