--- a/Views/Scorecard/CategoryTests.cshtml
+++ b/Views/Scorecard/CategoryTests.cshtml
@@ -24,19 +24,20 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            <th width="15%">
                 Description
             </th>
-            <th>
+            <th width="40%">
                 Expected Result
             </th>
-            <th>
+            <th width="10%">
                 Passed
             </th>
-            <th>
+            <th width="15%">
                 Notes
             </th>
-            <th></th>
+            <th width="20%">
+            </th>
         </tr>
     </thead>
     <tbody>
