--- a/Views/Setup/CreateCategoryTest.cshtml
+++ b/Views/Setup/CreateCategoryTest.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "CreateTest";
 }
 
+<style>
+    .entry-text {
+        width: 100%;
+        height: 100px;
+    } 
+</style>
+
 <h1>Create New Test</h1>
 
 <hr />
@@ -21,11 +28,7 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label class="control-label">Expected Result</label>
-                <input asp-for="ExpectedResult" class="form-control" />
-                <span asp-validation-for="ExpectedResult" class="text-danger"></span>
-            </div>
+            @Html.TextAreaFor(model => Model.ExpectedResult, new { @class = "entry-text" })
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
