Changed ScorecardTestModel ID to TestID, ID is now unique
Fixes a bug where having the same categorical test on multiple scorecards throws unique constraint error.

--- a/Views/Setup/AddScorecardTests.cshtml
+++ b/Views/Setup/AddScorecardTests.cshtml
@@ -62,7 +62,8 @@
                 new { @class = "dropdown-item dropdown-item-wide"})
         }
     </div>
-    @Html.ActionLink("Add All", "AddScorecardTests", new { }, new { @class="btn btn-success add-btn", @style="float:right" })
+    @Html.ActionLink("Add All", "AddAllCategoryTests", new { id = Model.Scorecard.ID, categoryID = Model.SelectedCategoryID }, 
+            new { @class="btn btn-success add-btn", @style="float:right" })
     <br />
     <br />
     <br />
