--- a/Views/Scorecard/Results.cshtml
+++ b/Views/Scorecard/Results.cshtml
@@ -5,13 +5,70 @@
 }
 
 <style>
-    .action-btn{
+    .action-btn {
         width: 100px;
     }
 </style>
 
 <h1>Scorecard Results</h1>
+<hr />
 
+<h3>In Progress</h3>
+<table class="table">
+    <thead>
+        <tr>
+            <th width="20%">
+                Started
+            </th>
+            <th width="25%">
+                Scorecard
+            </th>
+            <th width="25%">
+                User
+            </th>
+            <th width="10%">
+                Completed
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.ScorecardsInProgress)
+        {
+            var scorecardName = Model.Scorecards.FirstOrDefault(sc => sc.ID == item.ScorecardID).Name;
+            var progress = Model.GetProgress(item.ID);
+
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Started)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => scorecardName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => progress)
+                </td>
+                <td>
+                    @if (User.Identity.Name == item.User)
+                    {
+                        @Html.ActionLink("Resume", "Progress", "Scorecard", new { id = item.ID }, new { @class = "btn btn-sm btn-success action-btn", @style = "float:right" })
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Details", "ProgressDetails", "Scorecard", new { id = item.ID }, new { @class = "btn btn-sm btn-primary start-btn", @style = "float:right" })
+                    }
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+<br />
+<br />
+
+<h3>Completed</h3>
 <table class="table">
     <thead>
         <tr>
