Several significant to task usage

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
     <br />
     <br />
 
-    <h3 style="float: left">All Scorecards</h3>
+    <h3 style="float: left">Scorecards</h3>
     <table class="table">
         <thead>
             <tr>
