--- a/Views/Task/Index.cshtml
+++ b/Views/Task/Index.cshtml
@@ -45,7 +45,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td width="20%">
-                    @Html.ActionLink("Details", "CategoryDetails", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
                 </td>
             </tr>
         }
@@ -77,7 +77,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td width="20%">
-                    @Html.ActionLink("Details", "CategoryDetails", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
                 </td>
             </tr>
         }
