--- a/Views/Task/Index.cshtml
+++ b/Views/Task/Index.cshtml
@@ -8,10 +8,6 @@
 <style>
     .action-btn {
         width: 100px;
-    }
-
-    .header-btn {
-        width: 150px;
         float: right;
     }
 </style>
@@ -21,7 +17,8 @@
 <br />
 
 <h3 style="float: left">Available Tasks</h3>
-@Html.ActionLink("Create Task", "Create", new { }, new { @class = "btn btn-success header-btn" })
+@Html.ActionLink("New Task", "Create", new { }, new { @class = "btn btn-sm btn-success action-btn" })
+@Html.ActionLink("Closed Tasks", "Closed", new { }, new { @class = "btn btn-sm btn-warning action-btn", @style="margin-right: 15px" })
 <table class="table">
     <thead>
         <tr>
@@ -45,7 +42,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td width="20%">
-                    @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn" })
                 </td>
             </tr>
         }
@@ -77,7 +74,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td width="20%">
-                    @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn" })
                 </td>
             </tr>
         }
