--- a/Views/Task/Details.cshtml
+++ b/Views/Task/Details.cshtml
@@ -53,14 +53,26 @@
                 @Html.HiddenFor(model => Model.Task.Owner)
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.OwnerName)
-                    @Html.ActionLink("Abandon", "SetOpen", new { id = Model.Task.ID }, new { @class = "btn btn-sm btn-danger abandon-btn" })
+                    @if (!Model.IsClosed())
+                    {
+                        @Html.ActionLink("Remove Owner", "RemoveOwner", new { id = Model.Task.ID }, new { @class = "btn btn-sm btn-danger abandon-btn" })
+                    }
                 </dd>
             }
             else
             {
-                <dd class="col-sm-10">
-                    @Html.DropDownListFor(model => model.Task.Owner, Model.UserOptions, "", new { @class = "status-dropdown" })
-                </dd>
+                if (!Model.IsClosed())
+                {
+                    <dd class="col-sm-10">
+                        @Html.DropDownListFor(model => model.Task.Owner, Model.UserOptions, "", new { @class = "status-dropdown" })
+                    </dd>
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                        none
+                    </dd>
+                }
             }
             <dt class="col-sm-2">
                 <bold>Status</bold>
