--- a/Views/Scorecard/Progress.cshtml
+++ b/Views/Scorecard/Progress.cshtml
@@ -25,7 +25,7 @@
     var scrollToDiv = '@Model.ScrollToDiv';
     console.log("Scrolling to div " + scrollToDiv);
 
-    window.location.hash = '@scrollToDiv';
+    window.location.hash = scrollToDiv;
 </script>
 
 <h1>Scorecard Progress Overview</h1>
